--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
-fix geofence on/off
+fix geofence on/off *TJEK
 fix geofence slider radius 
-Camera save to camera roll
+Camera save to camera roll *TJEK
+gem billeder til tilhørende markers, evt. differencier med whatis. skal nok gemmes med AsyncStorage
+rydde op i koden så den ser presentabel ud og har comments der forklarer
+sørg for at addmarker opdatere state onPress
 
